--- a/doc/InstallationGuide/installation_guide.tex
+++ b/doc/InstallationGuide/installation_guide.tex
@@ -133,7 +133,7 @@ Useful libraries:
 \item PETSc v3.0 (\url{http://www.mcs.anl.gov/petsc/petsc-as/download/index.html})
 \end{itemize}
 
-Note, we suggestion using Hypre v2.7.0b and PETSc v3.1-p8.  (Jun, 2011)
+Note, we suggest using Hypre v2.7.0b and PETSc v3.1-p8.  (Jun, 2011)
 
 The Wasatch component requires the following:
 \begin{itemize}
