Updated the documentation to include Birch-Murnaghan EOS inputs.

--- a/doc/UserGuide/ice.tex
+++ b/doc/UserGuide/ice.tex
@@ -482,6 +482,15 @@ The input specification for the ``JWLC'', ``JWL++'' and ``Murnahan'' equations o
 </EOS>
 \end{Verbatim}
 %
+\begin{Verbatim}[fontsize=\footnotesize]
+<EOS type = "BirchMurnahan">
+  <n>     7.4       </n>
+  <K>     39.0e-11  </K>
+  <rho0>  1160.0    </rho0>
+  <P0>    101325.0  </P0>
+</EOS>
+\end{Verbatim}
+%
 The ``hard sphere'' or ``Abel'' equation of state for dense gases is
 %
 \begin{equation}
