Changed the Documentation to reflect the name change from 'Murnahan' to 'Murnaghan'.

--- a/doc/UserGuide/ice.tex
+++ b/doc/UserGuide/ice.tex
@@ -449,7 +449,7 @@ is specified with \cite{ref:Thomsen,ref:bejan}
 \end{Verbatim}
 % 
 %
-The input specification for the ``JWLC'', ``JWL++'' and ``Murnahan'' equations of state from \cite{ref:JWL} are: 
+The input specification for the ``JWLC'', ``JWL++'' and ``Murnaghan'' equations of state from \cite{ref:JWL} are: 
 \begin{Verbatim}[fontsize=\footnotesize]
 <EOS type = "JWLC">
   <A>   2.9867e11   </A>
@@ -474,7 +474,7 @@ The input specification for the ``JWLC'', ``JWL++'' and ``Murnahan'' equations o
 \end{Verbatim}
 %
 \begin{Verbatim}[fontsize=\footnotesize]
-<EOS type = "Murnahan">
+<EOS type = "Murnaghan">
   <n>     7.4       </n>
   <K>     39.0e-11  </K>
   <rho0>  1160.0    </rho0>
@@ -483,7 +483,7 @@ The input specification for the ``JWLC'', ``JWL++'' and ``Murnahan'' equations o
 \end{Verbatim}
 %
 \begin{Verbatim}[fontsize=\footnotesize]
-<EOS type = "BirchMurnahan">
+<EOS type = "BirchMurnaghan">
   <n>     7.4       </n>
   <K>     39.0e-11  </K>
   <rho0>  1160.0    </rho0>
