Clarification on the scalar balance.

--- a/doc/UserGuide/arches.tex
+++ b/doc/UserGuide/arches.tex
@@ -885,7 +885,7 @@ The \verb=<ScalarEfficiency>= node is a child of the \verb=<BoundaryCondition>= 
 \item Inlet: \verb=<scalar>=$\rightarrow$\verb=<inlet>= \\
 {\bf Input Type}: {\it string} \\
 {\bf Default}: {\it none} \\
-{\bf Description}: This identifies which inlets are associated with this scalar balance.  One may have multiple \verb=<inlet>='s specified. 
+{\bf Description}: This identifies which geometric objects of which inlets (ie, the label attribute of the geometry object) are associated with this scalar balance.  One may have multiple \verb=<inlet>='s specified.  
 \end{enumerate}
   
 
